Criando CRUD Filme

--- a/FilmesAPI5/appsettings.json
+++ b/FilmesAPI5/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FilmeConnection": "Server=RYZEN\\SQLEXPRESS;Database=filmeDb;Trusted_Connection=True;"
+  }
 }
